src/test/resources/syntax/invalid/group_definition_string_constant_for_class.unpick
unpick v3
const Class
    "" = ""